--- a/06_estructura_de_una_aplicacion_basica.ipynb
+++ b/06_estructura_de_una_aplicacion_basica.ipynb
@@ -51,7 +51,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tutorial.tutorial.settings as settings\n",
+    "import tutorial.tutorial.settings as settings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "settings.ROOT_URLCONF"
    ]
   },
@@ -204,7 +212,7 @@
     "* Importar el módulo *views* localizado en el mismo directorio donde se encuentra el archivo *tutorial/main/urls.py*. \n",
     "* La lista *urlpatterns* definen dos rutas:\n",
     "   * La ruta del subdirectorio *main/*, la cual se denota por una cadena de caracteres vacía (*''*), ligándola a la función *views.index()*.\n",
-    "   *    * La ruta de *main/calif*, la cual se denota por una cadena de caracteres *\"calif\"*, ligándola a la función *views.calificaciones()*."
+    "   * La ruta de *main/calif*, la cual se denota por una cadena de caracteres *\"calif\"*, ligándola a la función *views.calificaciones()*."
    ]
   },
   {
