--- a/08_configuracion_de_bases_de_datos.ipynb
+++ b/08_configuracion_de_bases_de_datos.ipynb
@@ -206,7 +206,16 @@
    },
    "outputs": [],
    "source": [
-    "%cat tutorial/tutorial/settings.py"
+    "from tutorial.tutorial import settings as settings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "settings.DATABASES"
    ]
   },
   {
