--- a/09_modelos.ipynb
+++ b/09_modelos.ipynb
@@ -265,7 +265,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cat tutorial/tutorial/settings.py"
+    "from tutorial.tutorial import settings as settings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "settings.INSTALLED_APPS"
    ]
   },
   {
@@ -328,6 +337,13 @@
    "outputs": [],
    "source": [
     "! ./manage.py migrate --database=default"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Aún cuando se realizó la conciliación, *Django* no crea una nueva tabla, ya que antes debe de crearse al menos una instancia del modelo *Alumno*."
    ]
   },
   {
