--- a/11_json_con_django.ipynb
+++ b/11_json_con_django.ipynb
@@ -209,7 +209,7 @@
    "source": [
     "**Ejemplo:**\n",
     "\n",
-    "* A continuación se creará un archivo de texto *alumno.txt* y el objeto correspondiente será llamado *archivo*.\n",
+    "* A continuación se creará un archivo de texto *alumno.json* y el objeto correspondiente será llamado *archivo*.\n",
     "* El resultado de aplicar *json.dump()* al objeto *alumno* será guardado en el archivo de texto."
    ]
   },
@@ -219,7 +219,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"alumno.txt\", \"wt\") as archivo:\n",
+    "with open(\"alumno.json\", \"wt\") as archivo:\n",
     "    json.dump(estudiante, archivo)"
    ]
   },
@@ -229,7 +229,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cat alumno.txt"
+    "%cat alumno.json"
    ]
   },
   {
@@ -262,7 +262,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"alumno.txt\", \"rt\") as archivo:\n",
+    "with open(\"alumno.json\", \"rt\") as archivo:\n",
     "    otro_estudiante = json.load(archivo)"
    ]
   },
