--- a/13_operaciones_basicas _con_modelos.ipynb
+++ b/13_operaciones_basicas _con_modelos.ipynb
@@ -444,11 +444,77 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* El *endpoint* http://localhost:5000/api/carga cargará los datos, creará los objetos y poblará la base de datos.\n",
+    "* El *endpoint* http://localhost:5000/api/carga cargará los datos, creará los objetos y poblará la base de datos. \n",
     "\n",
-    "**ADVERTENCIA:** Este *endpoint* sólo debe de usarse una vez. \n",
+    "**ADVERTENCIA:** El *endpoint* previo sólo debe de usarse una vez. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* El *endpoint* http://localhost:5000/api/ regresará el estado de todos los objetos en formato *JSON*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Efecto en la base de datos.\n",
     "\n",
-    "* El *endpoint* http://localhost:5000/api/ regresará el estado de todos los objetos en formato *JSON*.\n"
+    "El *endpoint* de carga creó y pobló la tabla *api_alumno* en la base *db_django*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext sql"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%sql mysql+mysqlconnector://root:0p3n5t4ck@localhost"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda mostrará un listado de tablas en la base *db_django*, la cual incluye a la tabla *api_alumno*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sql\n",
+    "use db_django;\n",
+    "show tables;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda desplegará el contenido de la tabla *api_alumno*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%sql select * from api_alumno;"
    ]
   },
   {
