--- a/17_las_plantillas_de_django.ipynb
+++ b/17_las_plantillas_de_django.ipynb
@@ -11,20 +11,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Django* es un framework diseñado primordialmente para desplegar páginas web de forma dinámica mediante el patrón *MVT*, el cual además de los modelos y las funciones de vista, aprovecha el uso de plantillas para lograr tal  finalidad."
+    "**ADVERTENCIA:**  \n",
+    "\n",
+    "Para poder realizar exitosamente los ejercicios de esta notebook, es necesario haber seguido al pie de la letra y en orden sucesivo las instrucciones de todas las notebooks previas."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plantillas (templates)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## Plantillas (templates).\n",
+    "\n",
+    "*Django* es un framework diseñado primordialmente para desplegar páginas web de forma dinámica mediante el patrón *MVT*, el cual además de los modelos y las funciones de vista, aprovecha el uso de plantillas para lograr tal  finalidad.\n",
+    "\n",
     "Una plantilla es un documento el cual contiene texto y código que permite a *Django* crear un texto nuevo a partir del original combionándolo con los datos que se le ingresan mendiante un *contexto*.\n",
     "\n",
     "**Ejemplo:**\n",
@@ -505,7 +504,7 @@
     "Cualquier URL que al final de *main/claves/* contenga caracteres alfanuméricos, regresará un documento HTML generado mediante la función saluda.\n",
     "\n",
     "* El elemento *&lt;title&gt;* del código *HTML* contiene el texto *Prueba de plantilla*. \n",
-    "* EL segmento de la URL capturado se deplegará en un mensaje de saludo.\n",
+    "* El segmento de la URL capturado se deplegará en un mensaje de saludo.\n",
     "\n",
     "http://localhost:5000/main/claves/Juan"
    ]
