--- a/14_servidor_api_rest.ipynb
+++ b/14_servidor_api_rest.ipynb
@@ -8,6 +8,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**ADVERTENCIA:**  \n",
+    "\n",
+    "Para poder realizar exitosamente los ejercicios de esta notebook, es necesario haber seguido al pie de la letra y en orden sucesivo las instrucciones de todas las notebooks previas."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -156,6 +165,17 @@
    "outputs": [],
    "source": [
     "%cat api/endpoint_views.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**ADVERTENCIAS:** \n",
+    "\n",
+    "* Al ejecutar la siguiente celda el servidor se inciará desde la notebook, por lo que para ejecutar cualquier otra celda es necesario interrumpir la ejecución del kernel.\n",
+    "\n",
+    "* Asegúrese que no haya otro servicio escuchando en el puerto *5000*."
    ]
   },
   {
