--- a/18_lenguaje_de_plantillas_de_django.ipynb
+++ b/18_lenguaje_de_plantillas_de_django.ipynb
@@ -125,7 +125,7 @@
     "Esta declaración permite evaluar declaraciones lógicas similares a las usadas en Python.\n",
     "\n",
     "```\n",
-    "{% _if_ <expresión lógica 1>%}\n",
+    "{% if <expresión lógica 1>%}\n",
     "...\n",
     "<Texto y código>\n",
     "...\n",
@@ -137,19 +137,19 @@
     "También es posible evaluar más de una expresión con la siguiente sintaxis:\n",
     "\n",
     "```\n",
-    "{% _if_ <expresión lógica 1>%}\n",
+    "{% if <expresión lógica 1>%}\n",
     "...\n",
     "<Texto y código>\n",
     "...\n",
-    "{% _elif_ <expresión lógica 2>%}\n",
+    "{% elif <expresión lógica 2>%}\n",
     "...\n",
     "<Texto y código>\n",
     "...\n",
-    "{% _elif_ <expresión lógica n>%}\n",
+    "{% elif <expresión lógica n>%}\n",
     "...\n",
     "<Texto y código>\n",
     "...\n",
-    "{% _else %}\n",
+    "{% else %}\n",
     "...\n",
     "<Texto y código>\n",
     "...\n",
@@ -188,7 +188,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### La estructura *for* .. *empty*.\n",
+    "### La estructura *for* ... *empty*.\n",
     "\n",
     "En este caso es posible delimitar una proción de texto y código que se ejecutará en caso de que el iterador esté vacío.\n",
     "\n",
@@ -448,7 +448,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La plantilla *listado.html* contiene el siguiente código:\n",
+    "La plantilla *src/18/listado.html* contiene el siguiente código:\n",
     "\n",
     "```html\n",
     "{% extends \"base.html\" %}\n",
@@ -553,13 +553,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -580,7 +573,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "!./manage.py runserver 0.0.0.0:5000"
@@ -590,7 +585,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "http://localhost:5000/api/vista/\n"
+    "http://localhost:5000/api/vista/\n",
+    "\n",
+    "http://localhost:5000/api/valida/"
    ]
   },
   {
