--- a/17_las_plantillas_de_django.ipynb
+++ b/17_las_plantillas_de_django.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Django* es un framework diseñado roimordialmente para desplegar páginas web de forma dinámica mediante el patrón MVT, el cual además de los modelos y las funciones de vista, aprovecha el uso de plantillas para lograr tal  finalidad."
+    "*Django* es un framework diseñado primordialmente para desplegar páginas web de forma dinámica mediante el patrón *MVT*, el cual además de los modelos y las funciones de vista, aprovecha el uso de plantillas para lograr tal  finalidad."
    ]
   },
   {
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Una plantilla es un documento el cual contiene texto y código que permite a *Django* crear un texto nuevo a partir del original y datos dentro de un *contexto*.\n",
+    "Una plantilla es un documento el cual contiene texto y código que permite a *Django* crear un texto nuevo a partir del original combionándolo con los datos que se le ingresan mendiante un *contexto*.\n",
     "\n",
     "**Ejemplo:**\n",
     "\n",
@@ -246,7 +246,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Sindo el valor de *BASE_DIR* el siguiente:"
+    "* Siendo el valor de *BASE_DIR* el siguiente:"
    ]
   },
   {
@@ -277,7 +277,7 @@
     "\n",
     "### La función *django.template.loader.get_template()*, \n",
     "\n",
-    "La cual permite cargar una plantilla a partir de un archivo que se encuentre dentro de las rutas predefinidas.\n",
+    "Esta función permite cargar una plantilla a partir de un archivo que se encuentre dentro de las rutas predefinidas en la configuración de *Django*.\n",
     "\n",
     "``` python \n",
     "get_template('<archivo>')\n",
@@ -309,7 +309,7 @@
    "source": [
     "**Ejemplo:**\n",
     "\n",
-    "El archivo *src/17/base.html* contiene el siguiente contenido, el cuaol mezcla código *HTML* con código *DTL*:\n",
+    "El archivo *src/17/base.html* contiene el siguiente contenido, el cual mezcla código *HTML* con código *DTL*:\n",
     "\n",
     "```html\n",
     "<!DOCTYPE html>\n",
@@ -405,10 +405,10 @@
     "```\n",
     "Donde:\n",
     "\n",
-    "* *plantilla* es el nombnre del archivo que contiene a la plantilla y que debe de estar localizado en algún direcotorio configurado para acceder a estas.\n",
+    "* *plantilla* es el nombre del archivo que contiene a la plantilla y que debe de estar localizado en algún directorio configurado para acceder a estas.\n",
     "* *context* es un objeto de tipo *dict* que contiene el contexto.\n",
     "* *content-type* es un parámetro opcional que indica el tipo de contenido del que se trata.\n",
-    "* *status* corresponde al mensaje de estado que se eviará junto con el contenido. El valor po defecto es *200*."
+    "* *status* corresponde al mensaje de estado que se eviará junto con el contenido. El valor por defecto es *200*."
    ]
   },
   {
