--- a/04_configuracion_de_un_proyecto.ipynb
+++ b/04_configuracion_de_un_proyecto.ipynb
@@ -20,7 +20,9 @@
    "source": [
     "## El archivo *settings.py*.\n",
     "\n",
-    "La configuración básica de un proyecto de *Django* se encuentra en un archivo de Python llamado *settings.py* \n",
+    "La configuración básica de un proyecto de *Django* se encuentra en un archivo de Python llamado *settings.py*. \n",
+    "\n",
+    "https://docs.djangoproject.com/en/2.1/ref/settings\n",
     "\n",
     "En el caso del proyecto creado previamente, dicho archivo se encuentra en *tutorial/tutorial/settings.py*."
    ]
@@ -55,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,47 +66,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['ALLOWED_HOSTS',\n",
-       " 'AUTH_PASSWORD_VALIDATORS',\n",
-       " 'BASE_DIR',\n",
-       " 'DATABASES',\n",
-       " 'DEBUG',\n",
-       " 'INSTALLED_APPS',\n",
-       " 'LANGUAGE_CODE',\n",
-       " 'MIDDLEWARE',\n",
-       " 'ROOT_URLCONF',\n",
-       " 'SECRET_KEY',\n",
-       " 'STATIC_URL',\n",
-       " 'TEMPLATES',\n",
-       " 'TIME_ZONE',\n",
-       " 'USE_I18N',\n",
-       " 'USE_L10N',\n",
-       " 'USE_TZ',\n",
-       " 'WSGI_APPLICATION',\n",
-       " '__builtins__',\n",
-       " '__cached__',\n",
-       " '__doc__',\n",
-       " '__file__',\n",
-       " '__loader__',\n",
-       " '__name__',\n",
-       " '__package__',\n",
-       " '__spec__',\n",
-       " 'os']"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dir(settings)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## La variable *settings.DEBUG*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "settings.DEBUG"
    ]
   },
   {
@@ -116,20 +98,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/opt/pythonista/py231/tutorial'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "settings.BASE_DIR"
    ]
@@ -159,20 +130,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'tutorial.urls'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "settings.ROOT_URLCONF"
    ]
@@ -186,26 +146,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'BACKEND': 'django.template.backends.django.DjangoTemplates',\n",
-       "  'DIRS': [],\n",
-       "  'APP_DIRS': True,\n",
-       "  'OPTIONS': {'context_processors': ['django.template.context_processors.debug',\n",
-       "    'django.template.context_processors.request',\n",
-       "    'django.contrib.auth.context_processors.auth',\n",
-       "    'django.contrib.messages.context_processors.messages']}}]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "settings.TEMPLATES"
    ]
@@ -223,42 +166,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'default': {'ENGINE': 'mysql.connector.django',\n",
-       "  'NAME': 'db_django',\n",
-       "  'USER': 'root',\n",
-       "  'PASSWORD': '0p3n5t4ck',\n",
-       "  'HOST': 'localhost',\n",
-       "  'PORT': 3306}}"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "settings.DATABASES"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tutorial/db.sqlite3\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%ls tutorial/db.sqlite3"
    ]
@@ -274,26 +193,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['django.middleware.security.SecurityMiddleware',\n",
-       " 'django.contrib.sessions.middleware.SessionMiddleware',\n",
-       " 'django.middleware.common.CommonMiddleware',\n",
-       " 'django.middleware.csrf.CsrfViewMiddleware',\n",
-       " 'django.contrib.auth.middleware.AuthenticationMiddleware',\n",
-       " 'django.contrib.messages.middleware.MessageMiddleware',\n",
-       " 'django.middleware.clickjacking.XFrameOptionsMiddleware']"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "settings.MIDDLEWARE"
    ]
@@ -307,20 +209,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/static/'"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "settings.STATIC_URL"
    ]
