--- a/18_lenguaje_de_plantillas_de_django.ipynb
+++ b/18_lenguaje_de_plantillas_de_django.ipynb
@@ -11,6 +11,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**ADVERTENCIA:**  \n",
+    "\n",
+    "Para poder realizar exitosamente los ejercicios de esta notebook, es necesario haber seguido al pie de la letra y en orden sucesivo las instrucciones de todas las notebooks previas."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "El *DTL* es un lenguaje extendido de Python y por lo tanto, puede realizar algunas operaciones cuando se ingresan objetos de Python como elementos de un contexto.\n",
     "\n",
     "Cabe hacer notar que los valores que puede manipular el *DTL* siempre serán convertidos a una cadena de caracteres.\n",
@@ -395,6 +404,8 @@
     "\n",
     "#### La plantilla base.\n",
     "\n",
+    "Esta plantilla define el bloque *encabezado* y el bloque *cuerpo* y será usada como base para extender a las siguientes plantillas.\n",
+    "\n",
     "El archivo *src/18/base.html* es una plantilla que contiene lo siguiente:\n",
     "\n",
     "```html\n",
@@ -414,9 +425,23 @@
     "        {% endblock %}\n",
     "    </body>\n",
     "</html>  \n",
-    "```\n",
-    "* Define el bloque *encabezado* y el bloque *cuerpo*.\n",
-    "* Esta plantilla será usada como base para extender a las siguientes plantillas."
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Se creará el directorio *tutorial/templates/*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!mkdir tutorial/templates/"
    ]
   },
   {
@@ -562,12 +587,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Se iniciará el servidor."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "%cd tutorial"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**ADVERTENCIAS:** \n",
+    "\n",
+    "* Al ejecutar la siguiente celda el servidor se inciará desde la notebook, por lo que para ejecutar cualquier otra celda es necesario interrumpir la ejecución del kernel.\n",
+    "\n",
+    "* Asegúrese que no haya otro servicio escuchando en el puerto *5000*."
    ]
   },
   {
@@ -585,6 +628,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Los resultados pueden ser vistos en las siguientes URLs.\n",
+    "\n",
     "http://localhost:5000/api/vista/\n",
     "\n",
     "http://localhost:5000/api/valida/"
