--- a/20_gestion_de_formas.ipynb
+++ b/20_gestion_de_formas.ipynb
@@ -8,18 +8,121 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**ADVERTENCIA:**  \n",
+    "\n",
+    "Para poder realizar exitosamente los ejercicios de esta notebook, es necesario haber seguido al pie de la letra y en orden sucesivo las instrucciones de todas las notebooks previas."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://docs.djangoproject.com/en/2.1/topics/forms/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Formas en HTML."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Componentes de una forma en *Django*.\n",
+    "\n",
+    "* Forma.\n",
+    "* Campo (field).\n",
+    "* Widget."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## El archivo *forms.py*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## La clase *django.forms.Form*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from django.forms import ModelForm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## La clase *django.forms.ModelForm*.\n",
+    "\n",
+    "https://docs.djangoproject.com/en/2.1/topics/forms/modelforms/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Los campos.\n",
+    "\n",
+    "https://docs.djangoproject.com/en/2.1/ref/forms/fields/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Los *widgets* de los campos.\n",
+    "\n",
+    "https://docs.djangoproject.com/en/2.1/ref/forms/widgets/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from django.forms import Widget"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Protección contra el envío de falsificación de peticiones entre sitios (CSRF).\n",
+    "\n",
+    "Cross Site Request Forgery.\n",
+    "\n",
+    "https://docs.djangoproject.com/en/2.1/ref/csrf/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**ADVERTENCIAS:** \n",
+    "\n",
+    "* Al ejecutar la siguiente celda el servidor se inciará desde la notebook, por lo que para ejecutar cualquier otra celda es necesario interrumpir la ejecución del kernel.\n",
+    "\n",
+    "* Asegúrese que no haya otro servicio escuchando en el puerto *5000*."
+   ]
   },
   {
    "cell_type": "code",
