--- a/20_gestion_de_formas.ipynb
+++ b/20_gestion_de_formas.ipynb
@@ -27,43 +27,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Formas en HTML."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Componentes de una forma en *Django*.\n",
+    "## Formas en HTML.\n",
     "\n",
-    "* Forma.\n",
-    "* Campo (field).\n",
-    "* Widget."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## El archivo *forms.py*."
+    "Las formas en HTML se definene mediante la etiquete *&tl;form&gt;* de la siguiente forma:\n",
+    "\n",
+    "```\n",
+    "<form action=\"una acción\" method=\"método\">\n",
+    "...\n",
+    "...\n",
+    "</form>\n",
+    "```\n",
+    "Las formas fueron creadas para interactuar con el usuario obteniendo información y/o ejecutando una acción a partir de elementos tipo *&lt;input&gt;*.\n",
+    "\n",
+    "Las acciones pueden:\n",
+    "* Enviar la información recabada a una URL específica.\n",
+    "   * El método HTTP de envío de la información puede ser *GET* o *POST*.\n",
+    "   * O por medio de la ejecución de una función de Javascript.\n",
+    "\n",
+    "Para mayor referencia consultar en https://www.w3schools.com/html/html_forms.asp"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## La clase *django.forms.Form*."
+    "## Elementos de una forma en *Django*.\n",
+    "\n",
+    "Django cuenta con un manejo muy avanzado de formas definiendo los siguientes elementos.\n",
+    " \n",
+    "* Formas.\n",
+    "* Campos (field).\n",
+    "* Widgets.\n",
+    "* Validadores."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from django.forms import ModelForm"
+    "## El archivo *forms.py*.\n",
+    "\n",
+    "Por convención, el archivo *forms.py* contiene las definiciones de formas de una aplicación."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## La clase *django.forms.Form*.\n",
+    "\n",
+    "La clase *django.forms.Form* es el elemento principal de una forma en *Django*. \n",
+    "\n",
+    "Un objeto instanciado de esta clase se puede contener atributos muy similares a los definidos en los modelos, los cuales se conocen como campos (fields).\n",
+    "\n",
+    "https://docs.djangoproject.com/en/2.1/ref/forms/api/#django.forms.Form"
    ]
   },
   {
@@ -72,7 +89,7 @@
    "source": [
     "## La clase *django.forms.ModelForm*.\n",
     "\n",
-    "https://docs.djangoproject.com/en/2.1/topics/forms/modelforms/"
+    "https://docs.djangoproject.com/en/2.1/topics/forms/modelforms/#django.forms.ModelForm"
    ]
   },
   {
@@ -95,11 +112,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from django.forms import Widget"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Validadores.\n",
+    "https://docs.djangoproject.com/en/2.1/ref/validators/"
    ]
   },
   {
@@ -111,6 +136,136 @@
     "Cross Site Request Forgery.\n",
     "\n",
     "https://docs.djangoproject.com/en/2.1/ref/csrf/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## La función *django.shortcuts.render()*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creación de una forma que consume una API REST para realizar altas."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Definición de la ruta para la forma."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cp src/20/urls.py tutorial/api/urls.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cat tutorial/api/urls.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Definción de una forma."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cp src/20/forms.py tutorial/api/forms.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cat tutorial/api/forms.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### La función de vista que contiene la forma."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cp src/20/template_views.py tutorial/api/template_views.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cat tutorial/api/template_views.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### La plantilla que incluye a la forma."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cp src/20/forma.html tutorial/templates/forma.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cat tutorial/templates/forma.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Se iniciará el servidor."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cd tutorial"
    ]
   },
   {
@@ -129,14 +284,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!./manage.py runserver 0.0.0.0:5000"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "http://localhost:5000/api/alta/"
+   ]
   },
   {
    "cell_type": "markdown",
