--- a/19_contenido_estatico.ipynb
+++ b/19_contenido_estatico.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "Existen algunos archivos a los que las plantillas de *Django* pueden acceder como contenido estáticos tales como.\n",
     "\n",
-    "* Hojas de estilo.\n",
+    "* Hojas de estilo (CSS).\n",
     "* Scripts en Javascript.\n",
     "* Imágenes.\n",
     "* Medios.\n",
@@ -472,7 +472,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Inclusión  de un direcotrio de imágenes en el direcotrio estático.\n",
+    "### Inclusión  de un direcotrio de imágenes en el directorio estático.\n",
     "\n",
     "El directorio *src/19/imagenes* contiene a la imagen *pythonista.png*.\n",
     "\n",
