--- a/20_gestion_de_formas.ipynb
+++ b/20_gestion_de_formas.ipynb
@@ -98,7 +98,7 @@
    "source": [
     "## Los campos.\n",
     "\n",
-    "https://docs.djangoproject.com/en/2.1/ref/forms/fields/"
+    "https://docs.djangoproject.com/en/2.1/ref/forms/fields/#built-in-field-classes"
    ]
   },
   {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,14 +135,61 @@
     "\n",
     "Cross Site Request Forgery.\n",
     "\n",
-    "https://docs.djangoproject.com/en/2.1/ref/csrf/"
+    "https://docs.djangoproject.com/en/2.1/ref/csrf/\n",
+    "\n",
+    "django.middleware.csrf.CsrfViewMiddleware\n",
+    "\n",
+    "### La etiqueta de plantilla *csrf*.\n",
+    "\n",
+    "```\n",
+    "{% csrf_token %}\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tutorial.tutorial import settings as settings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['django.middleware.security.SecurityMiddleware',\n",
+       " 'django.contrib.sessions.middleware.SessionMiddleware',\n",
+       " 'django.middleware.common.CommonMiddleware',\n",
+       " 'django.middleware.csrf.CsrfViewMiddleware',\n",
+       " 'django.contrib.auth.middleware.AuthenticationMiddleware',\n",
+       " 'django.contrib.messages.middleware.MessageMiddleware',\n",
+       " 'django.middleware.clickjacking.XFrameOptionsMiddleware']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "settings.MIDDLEWARE"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## La función *django.shortcuts.render()*"
+    "## La función *django.shortcuts.render()*\n",
+    "\n",
+    "```\n",
+    "render(request, '<plantilla>', context=<contexto>)\n",
+    "```"
    ]
   },
   {
@@ -161,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,9 +217,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "from django.urls import path, re_path\r\n",
+      "from . import views, endpoint_views, template_views\r\n",
+      "\r\n",
+      "urlpatterns = [path('', views.vista),\r\n",
+      "               path('carga', views.carga),\r\n",
+      "               re_path(r'^(?P<clave>[0-9]{4}$)', endpoint_views.clave),\r\n",
+      "               path('vista/', template_views.vista),\r\n",
+      "               path('valida/', template_views.valida),\r\n",
+      "               path('alta/', template_views.forma),\r\n",
+      "         ]"
+     ]
+    }
+   ],
    "source": [
     "%cat tutorial/api/urls.py"
    ]
@@ -186,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,9 +259,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "from django import forms\r\n",
+      "\r\n",
+      "CARRERAS =(('Sistemas', 'Sistemas'), \r\n",
+      "           ('Derecho', 'Derecho'), \r\n",
+      "           ('Actuaría', 'Actuaría'),\r\n",
+      "           ('Arquitectura', 'Arquitectura'),\r\n",
+      "           ('Administración', 'Administración'))\r\n",
+      "\r\n",
+      "class FormaAlumno(forms.Form):\r\n",
+      "    numero_de_cuenta = forms.IntegerField(label='Número de cuenta',\r\n",
+      "                                          min_value=1000, \r\n",
+      "                                          max_value=9999,\r\n",
+      "                                          error_messages={'required': 'Dato requerido'})\r\n",
+      "    nombre = forms.CharField(max_length=50, \r\n",
+      "                             label='Nombre')\r\n",
+      "    primer_apellido = forms.CharField(max_length=50, \r\n",
+      "                                      label='Primer apellido')\r\n",
+      "    segundo_apellido = forms.CharField(max_length=50, \r\n",
+      "                                       label='Segundo apellido', \r\n",
+      "                                       required=False)\r\n",
+      "    carrera = forms.ChoiceField(label='Carrera', \r\n",
+      "                                choices=CARRERAS)\r\n",
+      "    semestre = forms.IntegerField(label='Semestre', \r\n",
+      "                                  min_value=1)\r\n",
+      "    promedio = forms.FloatField(label='Promedio',\r\n",
+      "                                min_value=0.,\r\n",
+      "                                max_value=10.0)   \r\n",
+      "    al_corriente = forms.BooleanField(required=False)"
+     ]
+    }
+   ],
    "source": [
     "%cat tutorial/api/forms.py"
    ]
@@ -211,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,9 +319,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "from .models import Alumno\r\n",
+      "from .forms import FormaAlumno\r\n",
+      "from django.http import HttpResponseRedirect, HttpResponse, JsonResponse\r\n",
+      "from django.shortcuts import render, render_to_response\r\n",
+      "from requests import post\r\n",
+      "\r\n",
+      "campos = ('numero_de_cuenta', 'nombre', 'primer_apellido', 'segundo_apellido', 'carrera', 'semestre', 'promedio', 'al_corriente')\r\n",
+      "\r\n",
+      "\r\n",
+      "def vista(request):\r\n",
+      "    lista = [[(campo, getattr(alumno, campo)) for campo in campos] for alumno in Alumno.objects.all()]\r\n",
+      "    return render_to_response('listado.html',{'lista': lista}) \r\n",
+      "\r\n",
+      "\r\n",
+      "def valida(request):\r\n",
+      "    lista = [[getattr(alumno, campo) for campo in campos] for alumno in Alumno.objects.all()]\r\n",
+      "    return render_to_response('valida.html',{'lista': lista}) \r\n",
+      "\r\n",
+      "def forma(request):\r\n",
+      "    if request.method == 'POST':\r\n",
+      "        forma = FormaAlumno(request.POST)\r\n",
+      "        if forma.is_valid():\r\n",
+      "            datos = request.POST.dict()\r\n",
+      "            '''\r\n",
+      "            datos.pop('csrfmiddlewaretoken')\r\n",
+      "            cuenta = datos.pop('numero_de_cuenta')\r\n",
+      "            if 'al_corriente' in datos:\r\n",
+      "                datos['al_corriente']=True\r\n",
+      "            else:\r\n",
+      "                datos['al_corriente']=False\r\n",
+      "            resultado = post('http://' + request.get_host() + '/api/{}'.format(cuenta), data=datos)\r\n",
+      "            if resultado.status_code == 200:\r\n",
+      "                return HttpResponse('<h1>¡Alta Exitosa!</h1>')    \r\n",
+      "            else: \r\n",
+      "                return HttpResponse('<h1>Ocurrió un error en el alta.</h1>')'''\r\n",
+      "            return JsonResponse(datos)\r\n",
+      "            \r\n",
+      "    else:\r\n",
+      "        forma = FormaAlumno()\r\n",
+      "\r\n",
+      "    return render(request, 'forma.html', {'forma': forma}) "
+     ]
+    }
+   ],
    "source": [
     "%cat tutorial/api/template_views.py"
    ]
@@ -236,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,9 +392,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{% extends \"base.html\" %}\r\n",
+      "{% block encabezado %}Forma de alta {% endblock %}\r\n",
+      "{% block cuerpo %}\r\n",
+      "    <form action=\"/api/alta/\" method=\"post\">\r\n",
+      "        <div class=\"form-group\">\r\n",
+      "            {% csrf_token %}\r\n",
+      "            {{ forma }}\r\n",
+      "        </div>\r\n",
+      "        <input type=\"submit\" value=\"Enviar\">\r\n",
+      "    </form>\r\n",
+      "{% endblock %}"
+     ]
+    }
+   ],
    "source": [
     "%cat tutorial/templates/forma.html"
    ]
@@ -261,9 +426,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/opt/pythonista/py231/tutorial\n"
+     ]
+    }
+   ],
    "source": [
     "%cd tutorial"
    ]
@@ -281,9 +454,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Performing system checks...\n",
+      "\n",
+      "System check identified no issues (0 silenced).\n",
+      "February 28, 2019 - 22:43:47\n",
+      "Django version 2.1.7, using settings 'tutorial.settings'\n",
+      "Starting development server at http://0.0.0.0:5000/\n",
+      "Quit the server with CONTROL-C.\n",
+      "[28/Feb/2019 22:43:58] \u001b[m\"GET /api/alta/ HTTP/1.1\" 200 2123\u001b[0m\n",
+      "[28/Feb/2019 22:44:13] \u001b[m\"POST /api/alta/ HTTP/1.1\" 200 256\u001b[0m\n",
+      "[28/Feb/2019 22:44:53] \u001b[m\"GET /api/alta/ HTTP/1.1\" 200 2123\u001b[0m\n",
+      "[28/Feb/2019 22:45:12] \u001b[m\"POST /api/alta/ HTTP/1.1\" 200 277\u001b[0m\n",
+      "^C\n"
+     ]
+    }
+   ],
    "source": [
     "!./manage.py runserver 0.0.0.0:5000"
    ]
