--- a/06_estructura_de_una_aplicacion_basica.ipynb
+++ b/06_estructura_de_una_aplicacion_basica.ipynb
@@ -160,7 +160,8 @@
     "from django.contrib import admin\n",
     "from django.urls import include, path\n",
     "\n",
-    "urlpatterns = [path('admin/', admin.site.urls), path('main/', include('main.urls')),]\n",
+    "urlpatterns = [path('admin/', admin.site.urls), \n",
+    "               path('main/', include('main.urls')),]\n",
     "```\n",
     "La primera ruta de la lista apunta a la URL *admin/*, ligándola a la función *admin.site.urls()*.\n",
     "La segunda ruta de la lista punta a la URL *main/*, indicando que debe de importarse el módulo *main.urls*."
@@ -203,7 +204,8 @@
     "from django.urls import path\n",
     "from . import views\n",
     "\n",
-    "urlpatterns = [path('', views.index, name=\"inicio\"), path('calif', views.calificaciones)]\n",
+    "urlpatterns = [path('', views.index, name=\"inicio\"), \n",
+    "               path('vista', views.vista)]\n",
     "```\n",
     "\n",
     "Este código indica lo siguiente: \n",
@@ -212,7 +214,7 @@
     "* Importar el módulo *views* localizado en el mismo directorio donde se encuentra el archivo *tutorial/main/urls.py*. \n",
     "* La lista *urlpatterns* definen dos rutas:\n",
     "   * La ruta del subdirectorio *main/*, la cual se denota por una cadena de caracteres vacía (*''*), ligándola a la función *views.index()*.\n",
-    "   * La ruta de *main/calif*, la cual se denota por una cadena de caracteres *\"calif\"*, ligándola a la función *views.calificaciones()*."
+    "   * La ruta de *main/vista*, la cual se denota por una cadena de caracteres *\"vista\"*, ligándola a la función *views.vista()*."
    ]
   },
   {
@@ -288,7 +290,7 @@
     "def index(request):\n",
     "    return HttpResponse(\"<h1>Hola, mundo.</h1>\")\n",
     "\n",
-    "def calificaciones(request):\n",
+    "def vista(request):\n",
     "    pass\n",
     "```"
    ]
@@ -362,7 +364,7 @@
    "source": [
     "* Al acceder a [http://localhost:5000/admin](http://localhost:5000/admin) aparecerá la interfaz de administración del proyecto.\n",
     "* Al acceder a [http://localhost:5000/main](http://localhost:5000/main/) aparecerá un mensaje de encabezado desplegando *Hola, mundo.*.\n",
-    "* Al acceder a [http://localhost:5000/main/calif](http://localhost:5000/main/calif) se mostrará un mensaje de error. Debido a que *Django* está configurado en modo de depuración, desplegará los detalles del error de ejecución.\n",
+    "* Al acceder a [http://localhost:5000/main/vista](http://localhost:5000/main/vista) se mostrará un mensaje de error. Debido a que *Django* está configurado en modo de depuración, desplegará los detalles del error de ejecución.\n",
     "* Al acceder a cualquier otra URL distina a las indicadas,  se mostrará un mensaje de error 404. Debido a que *Django* está configurado en modo de depuracion, desplegará los detalles y los patrones de URL válidos."
    ]
   },
