--- a/10_servidor_de_operaciones_con_http.ipynb
+++ b/10_servidor_de_operaciones_con_http.ipynb
@@ -20,12 +20,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Notas preliminares sobre el capítulo 12.\n",
+    "## Notas preliminares sobre el capítulo 10.\n",
     "\n",
     "Este capítulo está dividido en dos notebooks:\n",
     "\n",
     "* La parte teórica y del servidor, corresponde al presente documento.\n",
-    "* La parte del cliente, corresponde a la notebook [12b_cliente_operaciones_con_http.ipynb](12b_cliente_operaciones_con_http.ipynb).\n",
+    "* La parte del cliente, corresponde a la notebook [11_cliente de_operaciones_con_http.ipynb](11_cliente_de_operaciones_con_http.ipynb).\n",
     "\n",
     "La notebook del cliente consume los recursos que el servidor que esta notebook despliega, por lo que es necesario que el servidor de Django de esta notebook esté en ejecución cuando la notebook del cliente se esté ejecutando."
    ]
@@ -224,7 +224,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cp src/12/urls.py tutorial/main/urls.py "
+    "%cp src/10/urls.py tutorial/main/urls.py "
    ]
   },
   {
@@ -242,7 +242,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cp src/12/views.py tutorial/main/views.py "
+    "%cp src/10/views.py tutorial/main/views.py "
    ]
   },
   {
