--- a/21_gestion_de_formas.ipynb
+++ b/21_gestion_de_formas.ipynb
@@ -29,7 +29,7 @@
    "source": [
     "## Formas en HTML.\n",
     "\n",
-    "Las formas en HTML se definene mediante la etiquete *&tl;form&gt;* de la siguiente forma:\n",
+    "Las formas en HTML se definene mediante la etiqueta *&lt;form&gt;* de la siguiente forma:\n",
     "\n",
     "```\n",
     "<form action=\"una acción\" method=\"método\">\n",
@@ -212,7 +212,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cp src/20/urls.py tutorial/api/urls.py"
+    "%cp src/21/urls.py tutorial/api/urls.py"
    ]
   },
   {
@@ -254,7 +254,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cp src/20/forms.py tutorial/api/forms.py"
+    "%cp src/21/forms.py tutorial/api/forms.py"
    ]
   },
   {
@@ -314,7 +314,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cp src/20/template_views.py tutorial/api/template_views.py"
+    "%cp src/21/template_views.py tutorial/api/template_views.py"
    ]
   },
   {
@@ -387,7 +387,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cp src/20/forma.html tutorial/templates/forma.html"
+    "%cp src/21/forma.html tutorial/templates/forma.html"
    ]
   },
   {
